Add id to entries & display entries in unordered lists

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h1>What are some of your favorite songs?</h1>
-        <form class="song-form"
+        <form class="song-form">
             <div class="input-group">
                 <input 
                     type="text" 
@@ -28,7 +28,13 @@
                 Add song to list
                 </button>
         </div>
+        <div class="row">
+            <div class="medium-8 medium-offset-2 column">
+                <ul id="song-list"></ul>
+            </div>
+        </div>
         </form>
+        <div id="grid"></div>
 
     <script src="index.js"></script>    
     </body>
